FEAT: secuencia de usuario y estado de victoria XD

--- a/style.css
+++ b/style.css
@@ -98,5 +98,5 @@ div{
     background-color: #3EFF00;
 }
 #cuadro4:hover,#cuadro4:focus{
-    background-color: #16b900;
+    background-color: #0f9103;
 }
